data/derived/comb/progs/unify/prog8717.ml.out
Characters 99-103:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type ('b -> 'b) list -> 'b
